@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 8ec58052f49c125d8689126d67002061ad995c98 ChangeLog
+SHA1 9c102e264d1707a96a99a06a309260e00cce46d0 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 003a1689432ca91c9d4d77556b871826b573fa57 MANIFEST
-SHA1 d2eebe43fe6e18a4175fffa687cba7d9c41b63b7 META.yml
-SHA1 64859c929fa388a9b53ccdafca833fd2becbcd3a Makefile.PL
+SHA1 1b2225f657b23c21357b0987c226989ac17f2a11 META.yml
+SHA1 f2e22b73c354e4279d27c9a29a2f21035f8ff637 Makefile.PL
 SHA1 ffcc80b5c5cbb52f2c2234e9d66f9f32d63f9be7 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 55ad5345eebcf4f13ea67debf3995c15930e2e5b bin/fullauto.pl
@@ -34,7 +34,7 @@ SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 b7567872ffb9a08c1730695b85f346d62cd792b7 lib/Net/FullAuto.pm
+SHA1 cc4cd4f92d6a293870aebff8a87cfff3bcb41568 lib/Net/FullAuto.pm
 SHA1 8a710a48bb21aa584949dbbe3649c0d5b2b084fc lib/Net/FullAuto/Custom/BackUp/README
 SHA1 b9b90c2707951d9d5753dc9ef9699abe7daddee9 lib/Net/FullAuto/Custom/README
 SHA1 3dba6317f994a5d42a6f45f959a7829aba92e242 lib/Net/FullAuto/Distro/fa_code.pm
@@ -48,7 +48,7 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAk4TmTkACgkQdsVAdUjO9Il4ZwCgoEjLntdbpliTUccOc7zBR3RH
-3q4AnRcW5TXeZRsiZbm28Mysg6gxSmPn
-=CJ3n
+iEYEARECAAYFAk4VkaYACgkQdsVAdUjO9Inu6ACgnXXwC5FJYJCC4GT+X5xUp7IW
+AbkAn2WYcdyo1hgemjKCISwhtHlL5up+
+=4DK4
 -----END PGP SIGNATURE-----
