@@ -54,7 +54,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.9937';
+our $VERSION='0.9938';
 
 
 use 5.005;
